# hindu-scriptures-rag

./: .dockerignore  .editorconfig  .env.example  .gitignore  .vercelignore  =3.0.0  Caddyfile  Dockerfile  EXECUTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROCESSING_STATUS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  START_HERE.md  UPANISHAD_TRANSLATIONS.md  app.py  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements-rag.txt  requirements.txt  setup.sh  skills-lock.json  test_ui.py  vercel.json
.claude/plans/: 2026-04-09-frontend-ux-redesign-design.md  2026-04-09-frontend-ux-redesign-plan.md
.cursor/rules/: explanatory-output-style.mdc
docs/: deploy-vercel.md
docs/decisions/: 0001-corpus-language-direction.md
english-v1-rag/: ENGLISH_RAG_SUMMARY.md  README.md  app.py  app_bootstrap.py  build_english_verses.py  cli.py  english_config.py  index_english.py  prompt_templates.py  query.py
english-v1-rag/agent/: __init__.py  conversation.py  react_loop.py  tools.py
english-v1-rag/parsers/: __init__.py  gutenberg_gita.py  gutenberg_mahabharata.py  yoga_sutras.py
english-v1-rag/static/: manifest.json  sw.js
english-v1-rag/templates/: index.html  login.html
examples/: query_verses.py
scripts/: clone_frontend.py  main.py  parse_all_scriptures.py  parse_gita.py  test_pipeline.py  validate_all_jsons.py  validate_schema.py  verify_verse_completeness.py
translations/: isha_upanishad_mueller.csv  isha_upanishad_mueller.txt  mundaka_upanishad_mueller.csv  mundaka_upanishad_mueller.txt
(+88 files in other folders)
